tests/machine/x/c/cast_struct.error
exit status 1
/workspace/mochi/tests/machine/x/c/cast_struct.c:12:3: error: unknown type name ‘todo_t’
   12 |   todo_t *data;
      |   ^~~~~~
/workspace/mochi/tests/machine/x/c/cast_struct.c: In function ‘create_todo_list’:
/workspace/mochi/tests/machine/x/c/cast_struct.c:17:31: error: ‘todo_t’ undeclared (first use in this function); did you mean ‘mode_t’?
   17 |   l.data = calloc(len, sizeof(todo_t));
      |                               ^~~~~~
      |                               mode_t
/workspace/mochi/tests/machine/x/c/cast_struct.c:17:31: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/cast_struct.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/cast_struct.c:26:3: error: unknown type name ‘todo_t’; did you mean ‘mode_t’?
   26 |   todo_t todo = (todo_t){.title = "hi"};
      |   ^~~~~~
      |   mode_t
/workspace/mochi/tests/machine/x/c/cast_struct.c:26:18: error: ‘todo_t’ undeclared (first use in this function); did you mean ‘todo’?
   26 |   todo_t todo = (todo_t){.title = "hi"};
      |                  ^~~~~~
      |                  todo
/workspace/mochi/tests/machine/x/c/cast_struct.c:26:25: error: expected ‘,’ or ‘;’ before ‘{’ token
   26 |   todo_t todo = (todo_t){.title = "hi"};
      |                         ^
/workspace/mochi/tests/machine/x/c/cast_struct.c:27:22: error: request for member ‘title’ in something not a structure or union
   27 |   printf("%s\n", todo.title);
      |                      ^
