tests/machine/x/c/cast_struct.c
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct Todo Todo;

typedef struct Todo {
  char *title;
} Todo;
typedef struct {
  int len;
  todo_t *data;
} todo_list_t;
todo_list_t create_todo_list(int len) {
  todo_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(todo_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  todo_t todo = (todo_t){.title = "hi"};
  printf("%s\n", todo.title);
  return 0;
}
int main() { return _mochi_main(); }
